[gd_scene load_steps=3 format=3 uid="uid://ck6a1wk6xj4e2"]

[ext_resource type="Script" path="res://ver_1/character/enemy/boss/Beethoven/beethoven_sting.gd" id="1_a1g3o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iwpax"]
size = Vector2(264.643, 123.884)

[node name="BeethovenSting" type="Node2D"]
script = ExtResource("1_a1g3o")

[node name="WaitingTimer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(297, 0)
scale = Vector2(2.24, 2.24)
shape = SubResource("RectangleShape2D_iwpax")

[connection signal="timeout" from="WaitingTimer" to="." method="_on_waiting_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
